[package]
name = "net-literals"
version = "0.2.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Literals for IP/socket addresses"
license = "LGPL-2.0"
readme = "README.md"
repository = "https://github.com/canndrew/net-literals"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.26"
proc-macro-error = "1.0.4"

